css fixed top menu on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -169,4 +169,14 @@
 		border:#FFF 5px solid;
 
 	}
+
+
+
+	#header {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		z-index: 1000;
+	}
 }
